# pdf-tools

./: .gitignore  README.md  pdf-toolbox-qt.spec  pyproject.toml  requirements.txt
assets/: presets.json
scripts/: build_win.ps1  run_dev.py
src/pdf_toolbox/: __init__.py  app.py  config.py  i18n.py  logging_conf.py
src/pdf_toolbox/core/: cancel.py  job_queue.py  models.py  presets.py  range_parser.py
src/pdf_toolbox/services/io/: naming.py  temp_files.py  validators.py
src/pdf_toolbox/services/pdf_ops/: __init__.py  base.py  compress_basic.py  compress_images.py  delete_pages.py  images_to_pdf.py  merge.py  ocr.py  pdf_to_images.py  ppt_to_pdf.py  reorder_pages.py  rotate_pages.py  split_extract.py
src/pdf_toolbox/ui/: main_window.py
src/pdf_toolbox/ui/tools_panels/: base.py  compress_panel.py  convert_panels.py  delete_rotate_panel.py  merge_panel.py  ocr_panel.py  reorder_panel.py  split_panel.py
src/pdf_toolbox/ui/widgets/: file_picker.py  output_options.py  preset_picker.py  progress_list.py  range_input.py
tests/: test_job_cancel.py  test_range_parser.py
